--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-alpha-3061620221230002",
     "@dcloudio/uni-mp-weixin": "3.0.0-alpha-3061620221230002",
     "@dcloudio/uni-quickapp-webview": "3.0.0-alpha-3061620221230002",
+    "sass": "^1.58.3",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
@@ -59,6 +60,10 @@
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3061620221230002",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3061620221230002",
     "@vue/tsconfig": "^0.1.3",
+    "eslint": "^8.35.0",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^7.3.1",
+    "style-loader": "^3.3.1",
     "typescript": "^4.9.4",
     "vite": "4.0.4",
     "vue-tsc": "^1.0.24"
