--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "build:quickapp-webview": "uni build -p quickapp-webview",
     "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
     "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix"
   },
   "dependencies": {
     "@dcloudio/uni-app": "3.0.0-alpha-3061620221230002",
@@ -59,9 +60,15 @@
     "@dcloudio/uni-cli-shared": "3.0.0-alpha-3061620221230002",
     "@dcloudio/uni-stacktracey": "3.0.0-alpha-3061620221230002",
     "@dcloudio/vite-plugin-uni": "3.0.0-alpha-3061620221230002",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
     "node-sass": "^8.0.0",
+    "prettier": "^2.8.4",
     "sass-loader": "^7.3.1",
     "style-loader": "^3.3.1",
     "typescript": "^4.9.4",
